# domain-learning-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.bat  start.sh
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
skills/accuracy-verifier/: SKILL.md
skills/adaptive-controller/: SKILL.md
skills/deep-researcher/: SKILL.md
skills/domain-mapper/: SKILL.md
skills/material-integrator/: SKILL.md
skills/path-visualizer/: SKILL.md
skills/practice-generator/: SKILL.md
skills/pre-assessor/: SKILL.md
skills/progress-tracker/: SKILL.md
skills/quiz-engine/: SKILL.md
skills/resource-curator/: SKILL.md
skills/spaced-repetition/: SKILL.md
skills/textbook-planner/: SKILL.md
src/: cli.py  logging_config.py  orchestrator.py
src/api/: __init__.py  app.py  deps.py
src/apis/: __init__.py  arxiv_client.py  base.py  crossref.py  github_client.py  open_alex.py  papers_with_code.py  semantic_scholar.py  tavily_client.py
src/llm/: __init__.py  client.py  provider_client.py
src/models/: __init__.py  assessment.py  bkt.py  cards.py  content.py  course.py  knowledge_graph.py  progress.py  quiz.py  resources.py  textbook.py  verification.py
src/skills/: __init__.py  accuracy_verifier.py  adaptive_controller.py  deep_researcher.py  domain_mapper.py  material_integrator.py  path_visualizer.py  practice_generator.py  pre_assessor.py  progress_tracker.py  quiz_engine.py  resource_curator.py  spaced_repetition.py  textbook_planner.py
src/storage/: local_store.py
tests/: test_storage.py
(+55 files in other folders)
